# MapanareApi

./: README.md  manage.py  pyproject.toml
auth/: serializers.py
authentication/: forms.py  models.py  urls.py  views.py
clients/: admin.py  models.py  serializers.py  urls.py  views.py
clients/migrations/: 0001_initial.py
countries/: admin.py  models.py
countries/migrations/: 0001_initial.py
devices/: admin.py  models.py  serializers.py  urls.py  views.py
devices/migrations/: 0001_initial.py  0002_alter_device_options.py
mapanare/: asgi.py  settings.py  urls.py  wsgi.py
profiles/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
profiles/migrations/: 0001_initial.py
register/: models.py  serializers.py  urls.py  views.py
sessions/: serializers.py  urls.py  views.py
static/css/: leaftlet_admin.css
templates/register/: forgotten_password_email.html
traces/: admin.py  models.py  serializers.py  urls.py  viewsets.py
traces/migrations/: 0001_initial.py
vehicles/: admin.py  models.py  serializers.py  serializers2.py  urls.py  views.py
vehicles/migrations/: 0001_initial.py  0002_auto_20210609_1230.py  0003_auto_20210614_1510.py  0004_alter_vehicles_status.py  0005_historicalvehicles.py
vehicles_groups/: admin.py  models.py  serializers.py  urls.py  views.py
vehicles_groups/migrations/: 0001_initial.py  0002_alter_vehiclesgroup_options.py
